2016-10-23  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.md (cpu_feature): Minor tweak.
	(enabled): Likewise.
	(movsi_insn, movdi_insn_sp32, movdi_insn_sp64, movsf_insn,
	movdf_insn_sp32, movdf_insn_sp64, zero_extendsidi2_insn_sp64,
	sign_extendsidi2_insn, mov<VM32:mode>_insn, mov<VM64:mode>_insn_sp64,
	mov<VM64:mode>_insn_sp32, not_<code><mode>, nand<mode>_vis,
	<code>_not1<mode>_vi, <code>_not2<mode>_vis, one_cmpl<mode>2,
	fcmp<code><GCM:gcm_name>, pdistn<mode>_vis): Likewise.

2016-10-23  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc-c.c (sparc_target_macros): Replace TARGET_64BIT
	with TARGET_ARCH64.  Define __VIS to 0x400 if TARGET_VIS4.

2016-10-21  Andrew Pinski  <apinski@cavium.com>

	* config/aarch64/aarch64-cores.def: Rewrite so IMP and PART are
	integer constants.
	* config/aarch64/driver-aarch64.c (struct aarch64_core_data): Change
	implementer_id to unsigned char.
	Change part_no to unsigned int.
	(AARCH64_BIG_LITTLE): New define.
	(INVALID_IMP): New define.
	(INVALID_CORE): New define.
	(cpu_data): Change the last element's implementer_id and part_no to
	integers.
	(valid_bL_string_p): Rewrite to ..
	(valid_bL_core_p): this for integers instead of strings.
	(parse_field): New function.
	(contains_string_p): Rewrite to ...
	(contains_core_p): this for integers and only for the part_no.
	(host_detect_local_cpu): Rewrite handling of implementation and
	par num to be integers; simplifying the code.

2016-10-21  Kugan Vivekanandarajah  <kuganv@linaro.org>

	* ipa-prop.c (ipa_compute_jump_functions_for_edge): Create nonzero
	value range for pointers in more cases.

2016-10-21  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/aarch64/aarch64.c (aarch64_add_constant_internal):
	Add extra argument to allow emitting the move immediate.
	Use add/sub with positive immediate.
	(aarch64_add_constant): Add inline function.
	(aarch64_add_sp): Likewise.
	(aarch64_sub_sp): Likewise.
	(aarch64_expand_prologue): Call aarch64_sub_sp.